CMAKE_MINIMUM_REQUIRED(VERSION 3.4)
PROJECT(vslam)

SET(CMAKE_CXX_COMPILER "g++")
SET( CMAKE_BUILD_TYPE Release  )
# SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
SET(CMAKE_CXX_FLAGS "-std=c++11 -g")

INCLUDE_DIRECTORIES(core)

# opencv
FIND_PACKAGE(OpenCV REQUIRED)
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})

# eigen
FIND_PACKAGE(Eigen3 REQUIRED)
INCLUDE_DIRECTORIES(${Eigen3_INCLUDE_DIRS})

SET(LIBVSLAM_SRC 
    core/Feature.cpp 
    core/Util.cpp
    core/Tracking.cpp
    core/Config.cpp)
ADD_LIBRARY(${PROJECT_NAME} SHARED ${LIBVSLAM_SRC})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${OpenCV_LIBS})

ADD_EXECUTABLE(test core/TEST.cpp)
TARGET_LINK_LIBRARIES(test ${PROJECT_NAME})